Refactoring. Some tasks are fixed.

--- a/structure.tex
+++ b/structure.tex
@@ -61,6 +61,8 @@
 \usepackage{longtable}
 \usepackage{array} % needed for "m" in longtable
 
+\usepackage{import}
+
 %----------------------------------------------------------------------------------------
 %	FONTS
 %----------------------------------------------------------------------------------------
