--- a/Sections/Boxes/tasks.tex
+++ b/Sections/Boxes/tasks.tex
@@ -15,22 +15,17 @@
 \item     Обчисліть $\iint\limits_{R} xy  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(3, 0)$, $(3, 4)$ та $(0, 4)$.
 \item     Знайдіть $\iint\limits_{R} (2x + 3y^2)  dx  dy$, де $R$ --- прямокутник з вершинами $(-1, -2)$, $(1, -2)$, $(1, 2)$ та $(-1, 2)$.
 \item     Обчисліть $\iint\limits_{R} \ln(xy)  dx  dy$, де $R$ --- прямокутник з вершинами $(1, 1)$, $(2, 1)$, $(2, 2)$ та $(1, 2)$.
-\item     Знайдіть $\iint\limits_{R} e^{x^2 + y^2}  dx  dy$, де $R$ --- прямокутник з вершинами $(-1, -1)$, $(1, -1)$, $(1, 1)$ та $(-1, 1)$.
-\item     Обчисліть $\iint\limits_{R} \cos^2(xy)  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(\frac{\pi}{3}, 0)$, $(\frac{\pi}{3}, \pi)$ та $(0, \pi)$.
 \item     Знайдіть $\iint\limits_{R} \frac{x^2}{y}  dx  dy$, де $R$ --- прямокутник з вершинами $(1, 1)$, $(3, 1)$, $(3, 2)$ та $(1, 2)$.
-\item     Обчисліть $\iint\limits_{R} \sin^2(xy)  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(\pi, 0)$, $(\pi, \frac{\pi}{4})$ та $(0, \frac{\pi}{4})$.
-\item     Знайдіть $\iint\limits_{R} \sqrt{xy}  dx  dy$, де $R$ --- прямокутник з вершинами $(1, 1)$, $(4, 1)$, $(4, 2)$ та $(1, 2)$.
-\item     Обчисліть $\iint\limits_{R} e^{xy^2}  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(2, 0)$, $(2, 3)$ та $(0, 3)$.
+\item     Обчисліть $\iint\limits_{R} \sqrt{x y}  dx  dy$, де $R$ --- прямокутник з вершинами $(1, 1)$, $(1, 4)$, $(9, 4)$ та $(9, 1)$.
 \item     Знайдіть $\iint\limits_{R} \frac{y}{x}  dx  dy$, де $R$ --- прямокутник з вершинами $(1, 1)$, $(3, 1)$, $(3, 4)$ та $(1, 4)$.
 \item     Обчисліть $\iint\limits_{R} x^3y  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(1, 0)$, $(1, 2)$ та $(0, 2)$.
 \item     Знайдіть $\iint\limits_{R} (x^2y + y^3)  dx  dy$, де $R$ --- прямокутник з вершинами $(-1, 0)$, $(1, 0)$, $(1, 3)$ та $(-1, 3)$.
 \item     Обчисліть $\iint\limits_{R} (xy + x)  dx  dy$, де $R$ --- прямокутник з вершинами $(1, 1)$, $(2, 1)$, $(2, 3)$ та $(1, 3)$.
 \item     Знайдіть $\iint\limits_{R} (x^2y^2 + 2xy)  dx  dy$, де $R$ --- прямокутник з вершинами $(-2, -1)$, $(0, -1)$, $(0, 2)$ та $(-2, 2)$.
-\item     Обчисліть $\iint\limits_{R} \sin(xy) \cos(xy)  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(\pi, 0)$, $(\pi, \frac{\pi}{2})$ та $(0, \frac{\pi}{2})$.
-\item     Знайдіть $\iint\limits_{R} \left(e^{xy} + xy\right)  dx  dy$, де $R$ --- прямокутник з вершинами $(-1, 0)$, $(1, 0)$, $(1, 1)$ та $(-1, 1)$.
+\item     Обчисліть $\iint\limits_{R} y \cos(xy)  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(\pi, 0)$, $(\pi, 1)$ та $(0, 1)$.
 \item     Обчисліть $\iint\limits_{R} (xy^2 + y)  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(2, 0)$, $(2, 3)$ та $(0, 3)$.
 \item     Знайдіть $\iint\limits_{R} (x + 2y + xy)  dx  dy$, де $R$ --- прямокутник з вершинами $(-2, -1)$, $(1, -1)$, $(1, 2)$ та $(-2, 2)$.
-\item     Обчисліть $\iint\limits_{R}\left( \cos(xy) - xy\right)  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(\frac{\pi}{2}, 0)$, $(\frac{\pi}{2}, \pi)$ та $(0, \pi)$.
 \item     Знайдіть $\iint\limits_{R} \frac{x^2 + y^2}{xy}  dx  dy$, де $R$ --- прямокутник з вершинами $(1, 1)$, $(3, 1)$, $(3, 2)$ та $(1, 2)$.
+\item     Знайдіть $\iint\limits_{R} (2x + 3y) d x d y$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(4, 0)$, $(4, 2)$ та $(0, 2)$.
 \end{enumerate}
 \end{enumerate}
