Додані завдання для самостійної роботи за темою 'Подвійні інтеграли на прямокутниках'

--- a/Sections/Boxes/theory.tex
+++ b/Sections/Boxes/theory.tex
@@ -1,4 +1,8 @@
 \chapter{Теоретичні відомості}
+В цьому розділі ми наведемо означення та теореми, на підставі яких відбувається обчислення кратних інтегралів по гіперпрямокутниках. Більш детально з відповідним матеріалом можна ознайомитись в наступних джерелах:
+\begin{itemize}
+\item \cite{Dor94v2}, глава 14, \$1;
+\end{itemize}
 \section{Означення}
 \begin{definition}[Гіперпрямокутник]\index{гіперпрямокутник}\label{def:box}
 Нехай $m$ --- натуральне число, ${a_1<b_1}$, ${a_2 < b_2}$, $\ldots$, ${a_m < b_m}$ --- фіксовані дійсні числа. Будемо називати ($m$--вимірним) гіпркпрямокутником або брусом декартів добуток
