--- a/Sections/Boxes/tasks.tex
+++ b/Sections/Boxes/tasks.tex
@@ -1,6 +1,6 @@
 \chapter{Задвання для самостійної роботи}
 \begin{enumerate}
-\item  В цьому завданні потрібно знайти вказаний подвійний інтеграл вздовж вказаного прямокутника.
+\item  В цьому завданні потрібно знайти вказаний подвійний інтеграл по прямокутнику.
 \begin{enumerate}[label*=\arabic*.]
 \item    Знайдіть подвійний інтеграл $\iint\limits_R e^{x+y}  dx  dy$, де $R$ --- прямокутник з вершинами $(0,0)$, $(2,0)$, $(2,1)$ та $(0,1)$.
 \item     Обчисліть $\iint\limits_{R} 2xy  dx  dy$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(1, 0)$, $(1, 2)$ та $(0, 2)$.
@@ -27,5 +27,10 @@
 \item     Знайдіть $\iint\limits_{R} (x + 2y + xy)  dx  dy$, де $R$ --- прямокутник з вершинами $(-2, -1)$, $(1, -1)$, $(1, 2)$ та $(-2, 2)$.
 \item     Знайдіть $\iint\limits_{R} \frac{x^2 + y^2}{xy}  dx  dy$, де $R$ --- прямокутник з вершинами $(1, 1)$, $(3, 1)$, $(3, 2)$ та $(1, 2)$.
 \item     Знайдіть $\iint\limits_{R} (2x + 3y) d x d y$, де $R$ --- прямокутник з вершинами $(0, 0)$, $(4, 0)$, $(4, 2)$ та $(0, 2)$.
+\item Обчисліть подвійний інтеграл $\iint\limits_R (x^2 + y^2)  dx  dy$, де $R$ --- прямокутник із вершинами $(0, 0)$, $(1, 0)$, $(1, 2)$ та $(0, 2)$.
+\item Обчисліть $\iint\limits_R (2x + y) dx dy$, де $R$ --- прямокутник, визначений умовами $0 \leq x \leq 1$ та $0 \leq y \leq 2$.
+\item Обчисліть $\iint\limits_R (x^2 + 3y) dx dy$, де $R$ --- прямокутник, визначений умовами  $-1 \leq x \leq 1$ та $1 \leq y \leq 3$.
+\item Обчисліть $\iint\limits_R (x^2 - y^2) dx dy$, де $R$ --- прямокутник, визначений умовами  $-2 \leq x \leq 2$ та $-1 \leq y \leq 1$.
+\item Обчисліть $\iint\limits_R (x^3 + 2xy) dx dy$, де $R$ --- прямокутник, визначений умовами  $0 \leq x \leq 2$ та $0 \leq y \leq 3$.
 \end{enumerate}
 \end{enumerate}
