a lot of changes

--- a/Content/Boxes/Examples/examples.tex
+++ b/Content/Boxes/Examples/examples.tex
@@ -1,7 +1,9 @@
 \chapter{Приклади обчислень}
+В цьому розділі ми розглянемо декілька прикладів обчислення подвійних інтегралів по прямокутниках і потрійних інтегралів по прямокутних паралелепіпедах.
 \begin{example}
 Знайдіть ${\iint\limits_{D}\left(x^2+y^2\right)d x d y}$, де через $D$ позначений пря\-мо\-кут\-ник ${D = \segment{1}{2}\times\segment{2}{4}}$.
-
+\end{example}
+\begin{solution}
 Спочатку зробимо рисунок області інтегрування $D$.
 
 \includegraphics[width=0.25\paperwidth]{example.2.1}
@@ -81,7 +83,7 @@ g(y) = y^2 &
 \iint\limits_{D}\left(x^2+y^2\right)d x d y =  \int\limits_1^2\left(2 x^2 + \frac{56}{3}\right)dx = .\frac{14}{3} + \frac{56}{3} = \frac{70}{3}.
 \]
 Відповідь: ${\iint\limits_{D}\left(x^2+y^2\right)d x d y = .\frac{14}{3} + \frac{56}{3} = \frac{70}{3}.}$
-\end{example}
+\end{solution}
 
 \begin{example}
 Знайдіть ${\iint\limits_{D}8 x^2 \sin\left(4 x y\right)d x d y}$, де через $D$ позначений пря\-мо\-кут\-ник ${D = \segment{\frac{\pi}{2}}{\pi}\times\segment{0}{1}}$.
