--- a/Content/Boxes/Theory/Definitions/definitions.tex
+++ b/Content/Boxes/Theory/Definitions/definitions.tex
@@ -1,9 +1,4 @@
-\chapter{Теоретичні відомості}
-В цьому розділі ми наведемо означення та теореми, на підставі яких відбувається обчислення кратних інтегралів по гіперпрямокутниках. Більш детально з відповідним матеріалом можна ознайомитись в наступних джерелах:
-\begin{itemize}
-\item \cite{Dor94v2}, глава 14, \$1;
-\end{itemize}
-\section{Означення}
+\section{Кратні інтеграли по гіперпрямокутниках}
 \begin{definition}[Гіперпрямокутник]\index{гіперпрямокутник}\label{def:box}
 Нехай $m$ --- натуральне число, ${a_1<b_1}$, ${a_2 < b_2}$, $\ldots$, ${a_m < b_m}$ --- фіксовані дійсні числа. Будемо називати ($m$--вимірним) гіпркпрямокутником або брусом декартів добуток
 \[
@@ -141,97 +136,3 @@ I_* \leq I^*.
 \begin{remark}
 Окільки довільний брус --- компактна множина в \eucl{m}, то довільна неперервна на брусі функція буде обмежена на ньому.
 \end{remark}
-
-\section{Властивості кратних інтегралів}
-\begin{enumerate}
-\item Інтеграл від константи.
-\begin{intextProposition}
-Для довільної дійсної константи $c$ стала функція ${f(x) \equiv c}$ інтегровна на довільному брусі $Q$, причому
-\[
-\int\limits_{Q} c d x = c\m\left(Q\right).
-\]
-\end{intextProposition}
-\item Лінійність
-\begin{intextProposition}
-Якщо обидві функції ${f\colon Q \to \R}$ і ${g\colon Q \to \R}$ неперервні на брусі $Q$, то для довільних дійсних чисел $\alpha$ і $\beta$ виконується рівність
-\[
-\int\limits_{Q} \left(\alpha f(x) + \beta g(x)\right)d x = \alpha\int\limits_{Q} f(x) d x + \beta\int\limits_{Q} g(x) d x.
-\]
-\end{intextProposition}
-\item Аддитивність
-\begin{intextProposition}
-Якщо брус $Q$ є об'єднанням двох брусів --- ${Q = Q_1 \cup Q_2}$, причому бруси $Q_1$ і $Q_2$ не мають спільних внутрішніх точок, а функція ${f\colon Q \to \R}$ неперервна на $Q$, то
-\[
-\int\limits_{Q} f(x) d x = \int\limits_{Q_1} f(x) d x + \int\limits_{Q_2} f(x) d x.
-\]
-\end{intextProposition}
-\begin{remark}
-Окільки функція ${f}$ неперервна на $Q$, то вона неперервна на $Q_1$ і $Q_2$, а значить, всі три інтеграли існують.
-\end{remark}
-\item Невід'ємність
-\begin{intextProposition}
-Якщо функція ${f\colon Q \to \R}$ неперервна на брусі $Q$ і ${\forall x\in Q\ f(x)\geq 0}$, то ${\int\limits_{Q} f(x) d x \geq 0.}$
-\end{intextProposition}
-\item Монотонність
-\begin{intextProposition}
-Якщо обидві функції ${f\colon Q \to \R}$ і ${g\colon Q \to \R}$ неперервні на брусі $Q$ і ${\forall x\in Q\ f(x)\geq g(x)}$, то ${\int\limits_{Q} f(x) d x \geq \int\limits_{Q} g(x) d x.}$
-\end{intextProposition}
-\item Модуль інтеграла
-\begin{intextProposition}
-Якщо функція ${f\colon Q \to \R}$ неперервна на брусі $Q$, то
-\[
-\left|\int\limits_{Q} f(x) d x\right| \leq \int\limits_{Q} \left|f(x)\right| d x.
-\]
-\end{intextProposition}
-\item Теорема про середнє значення
-\begin{intextProposition}
-Якщо функція ${f\colon Q \to \R}$ неперервна на брусі $Q$, то
-\[
-\exists \theta\in Q\colon \int\limits_{Q} f(x) d x = f\left(\theta\right)\m\left(Q\right).
-\]
-\end{intextProposition}
-\end{enumerate}
-\section{Обчислення кратних інтегралів}
-Обчислення кратних інтегралів відбувається шляхом зведення них до повторних інтегралів Рімана на підставі наступних теорем.
-\begin{theorem}
-Нехай задані брус
-\[
-Q = \segment{a_1}{b_1}\times\segment{a_2}{b_2}\times\ldots\times\segment{a_m}{b_m} \subset \eucl{m}
-\]
-і функція $f\colon Q\to \R$, що неперервна на цьому брусі. Тоді для довільного $k$ між $1$ і $m$ виконуються наступні твердження:
-\begin{enumerate}[(1)]
-\item для довільного фіксованого ${\overline{x_k} \in \segment{a_k}{b_k}}$ функція
-\[
-f\left(x_1, \ldots, x_{k-1}, \overline{x_k}, x_{k+1}, \ldots, x_m \right)
-\]
-неперервна на брусі
-\[
-Q_k = \segment{a_1}{b_1}\times\ldots\times\segment{a_{k-1}}{b_{k-1}}\times\segment{a_{k+1}}{b_{k+1}}\times\ldots\times\segment{a_m}{b_m} \subset \eucl{m-1};
-\]
-\item має місце співвідношення
-\[
-\begin{array}{lr}
-\int\limits_Q f(x)d x = \\
-=\int\limits_{a_k}^{b_k}\left(\int\limits_{Q_k}f\left(x_1, \ldots, x_{k-1}, x_k, x_{k+1}, \ldots, x_m \right)d x_1 \ldots d x_{k-1} d x_{k+1} \ldots d x_m\right)d x_k.
-\end{array}
-\]
-\end{enumerate}
-\end{theorem}
-Застосовуючи послідовно цю теорему для ${k = m, m - 1, \ldots, 2, 1}$, отримаємо наступний
-\begin{corollary}
-В умовах останньої теореми має місце формула
-\[
-\begin{array}{lr}
-\int\limits_Q f(x)d x = \\
-=\int\limits_{a_{m}}^{b_{m}}\left(
-\int\limits_{a_{m-1}}^{b_{m-1}}\left(
-\ldots\left(
-\int\limits_{a_1}^{b_1}
-f\left(x_1, x_2, \ldots, x_m \right)
-d x_1 \right)
-\ldots\right)
-d x_{m-1} \right)
-d x_m .
-\end{array}
-\]
-\end{corollary}
