--- a/Content/Change_In_Variables/change_in_variables.tex
+++ b/Content/Change_In_Variables/change_in_variables.tex
@@ -1,6 +1,6 @@
 \part{Заміна змінних}
-\section{Теоретичні відомості}
-\subsection{Основна теорема}
+\chapter{Теоретичні відомості}
+\section{Формула заміни змінних}
 \begin{theorem}
 Нехай $A$ --- відкрита підмножина $\eucl{m}$, $B$ --- компактна вимірна підмножина $A$, вектор--функція ${f\colon A\to\eucl{m}}$ задовольняє наступні умови:
 \begin{enumerate}
@@ -449,7 +449,7 @@ z = g_2\left(r, \varphi, z\right)= z.
 \begin{align*}
 \boxed{\int\limits_{g\left(B\right)} f(x, y, z) dx dy dz = \int\limits_{B} f\left(r \cos\varphi, r \sin\varphi, z \right) r dr d\varphi dz.}
 \end{align*}
-\section{Приклади обчислень}
+\chapter{Приклади обчислень}
 \begin{example}[перехід до полярних координат]
 Знайти ${\iint\limits_D x y d x d y}$, де через $D$ позначена область в першому квадранті ${x\geq0}$, ${y\geq0}$, що обмежена лініями ${x^2 +y^2 = R^2}$, ${y= 0}$, ${y = x\sqrt{3}}$.
 \end{example}
