--- a/Content/Integrals_On_Measurable_Sets/Examples/examples.tex
+++ b/Content/Integrals_On_Measurable_Sets/Examples/examples.tex
@@ -1,4 +1,4 @@
-\section{Приклади обчислень}
+\chapter{Приклади обчислень}
 \begin{example}
 Знайти ${\iint\limits_D y^3 x^2 d x d y}$, де через $D$ позначена область на площині обмежена лініями ${x = 0}$, ${y = x}$, ${x + y = 2}$.
 
