--- a/Content/Integrals_On_Measurable_Sets/Theory/Measure/measure.tex
+++ b/Content/Integrals_On_Measurable_Sets/Theory/Measure/measure.tex
@@ -1,6 +1,7 @@
-\part{Вимірні множини}\label{part:measure}
+\section{Вимірні множини}\label{part:measure}
+
 Наша наступна мета --- визначити кратні інтеграли не тільки по гіперпрямокутниках, а і по множинах більш широкого класу. Цей клас --- клас вимірних за Жорданом множин. До визначення цього класу ми зараз і переходимо.
-\section{Розбиття простору \eucl{m}}
+\subsection{Розбиття простору \eucl{m}}
 \begin{definition}
 Розбиттям нульового порядку простору \eucl{m} будемо називати зображення простору \eucl{m} у вигляді об'єднання всіх можливих брусів. сторони яких є відрізками довижини 1 з цілими координатами:
 \[
@@ -22,7 +23,7 @@
 \right| n_1, n_2, \ldots, n_m\in\Z
 \right\}.
 \]
-\section{Міра Жордана}
+\subsection{Міра Жордана}
 \hyperref[def:box]{Нагадаємо}, що мірою брусу
 \[
 Q = \segment{a_1}{b_1}\times\segment{a_2}{b_2}\times\ldots\times\segment{a_m}{b_m} \subset \eucl{m},
