--- a/Content/Integrals_On_Measurable_Sets/integrals_on_measurable_sets.tex
+++ b/Content/Integrals_On_Measurable_Sets/integrals_on_measurable_sets.tex
@@ -1,6 +1,6 @@
 \part{Кратні інтеграли по вимірних множинах}
-\input{theory}
-\input{examples}
+\subimport{Theory}{theory}
+\subimport{Examples}{examples}
 
 
 
