--- a/main.tex
+++ b/main.tex
@@ -107,12 +107,11 @@
 \pagestyle{fancy} % Enable headers and footers again
 
 
-\subimport{Sections/Intro}{intro}
-\subimport{Sections/Boxes}{boxes}
-\subimport{Sections/Measure}{measure}
-\subimport{Sections/Integrals_On_Measurable_Sets}{integrals_on_measurable_sets}
-\subimport{Sections/Change_In_Variables}{change_in_variables}
-\subimport{Sections/Bibliography}{bibliography}
-\subimport{Sections/Index}{index}
+\subimport{Content/Intro}{intro}
+\subimport{Content/Boxes}{boxes}
+\subimport{Content/Integrals_On_Measurable_Sets}{integrals_on_measurable_sets}
+\subimport{Content/Change_In_Variables}{change_in_variables}
+\subimport{Content/Bibliography}{bibliography}
+\subimport{Content/Index}{index}
 
 \end{document}
