--- a/Content/Boxes/Self_Control/Problems/Triple/triple.tex
+++ b/Content/Boxes/Self_Control/Problems/Triple/triple.tex
@@ -30,13 +30,26 @@
     \begin{enumerate}[label*=\arabic*.]
         \item $\int\limits_0^1 2z \,dx$.
         \item $\int\limits_0^2 \left(3 x^{2}+3 z^{2}+9\right) \,dx$.
-        \item $\int\limits_0^2 \left(-4 z+4 z {\mathrm e}^{4 x z}\right) \,dx$.
-        \item $\int\limits_0^2 \left(3 x+21+9 z\right) \,dx$.
+        \item $\int\limits_0^1 \left(-4 z+4 z {\mathrm e}^{4 x z}\right) \,dx$.
+        \item $\int\limits_0^2 \left(3 x+15+9 z\right) \,dx$.
         \item $\int\limits_0^1 {\sin}{\left(x z \pi \right)} {z} \,dx$.
         \item $\int\limits_0^1 \left(\frac{8}{3}+6 x+4 z\right) \,dx$.
         \item $\int\limits_0^3 \left(6 z x+2 x+4 z\right) \,dx$.
         \item $\int\limits_1^2 \frac{\ln\! \left(2\right)}{x z} \,dx$.
         \item $\int\limits_0^1 \left({x^{3}+\frac{1}{4}+z^{3}}\right) \,dx$.
         \item $\int\limits_0^2 \left(z^{2}+x\right) \,dx$.
+        \end{enumerate}
+\item Підрахуйте наступні інтеграли Рімана:
+    \begin{enumerate}[label*=\arabic*.]
+        \item $\int\limits_0^3 2z \,dz$.
+        \item $\int\limits_0^4 \left({6} {z^{2}}{+}{26}\right) \,dz$.
+        \item $\int\limits_0^3 \left(-1+{\mathrm e}^{4 z}-4z\right) \,dz$.
+        \item $\int\limits_2^5 \left(36 + 18 z\right) \,dz$.
+        \item $\int\limits_0^3 \dfrac{1 - \cos\! \left(\pi  z\right)}{\pi} \,dz$.
+        \item $\int\limits_0^3\left(\frac{17}{3}+4 z\right) \,dz$.
+        \item $\int\limits_0^1 \left({39} {z}{+}{9}\right) \,dz$.
+        \item $\int\limits_3^5 \frac{\ln\! \left(2\right)^{2}}{z} \,dz$.
+        \item $\int\limits_0^1 \left(\frac{1}{2}+z^{3}\right) \,dz$.
+        \item $\int\limits_0^3 \left({2} {z^{2}}{+}{2}\right) \,dz$.
         \end{enumerate}
 \end{enumerate}
