--- a/Content/Boxes/Self_Control/Answers/Triple/triple.tex
+++ b/Content/Boxes/Self_Control/Answers/Triple/triple.tex
@@ -1,16 +1,63 @@
 \section{Потрійні інтеграли}
 \begin{enumerate}
- \item
-        \begin{enumerate}[label*=\arabic*.]
-            \item $\int\limits_0^2\int\limits_0^1\int\limits_0^3 z \,dy\,dx\,dz$.
-            \item $\int\limits_0^3\int\limits_0^2\int\limits_0^4 (x^2 + y^2 + z^2) \,dy\,dx\,dz$.
-            \item $\int\limits_0^2\int\limits_0^1\int\limits_0^3 e^{xyz} \,dy\,dx\,dz$.
-            \item $\int\limits_1^4\int\limits_0^2\int\limits_2^5 (x + 2y + 3z) \,dy\,dx\,dz$.
-            \item $\int\limits_0^2\int\limits_0^1\int\limits_0^3 \sqrt{x^2 + y^2 + z^2} \,dy\,dx\,dz$.
-            \item $\int\limits_0^2\int\limits_0^1\int\limits_0^3 (3x + y^2 + 2z) \,dy\,dx\,dz$.
-            \item $\int\limits_0^2\int\limits_0^3\int\limits_0^1 (xy + 2yz + 3zx) \,dy\,dx\,dz$.
-            \item $\int\limits_2^4\int\limits_1^2\int\limits_3^5 \frac{1}{xyz} \,dy\,dx\,dz$.
-            \item $\int\limits_0^1\int\limits_0^1\int\limits_0^1 (x^3 + y^3 + z^3) \,dy\,dx\,dz$.
-            \item $\int\limits_0^1\int\limits_0^2\int\limits_0^3 (2xy + z^2) \,dy\,dx\,dz$.
-        \end{enumerate}
+    \item
+        \begin{multicols}{2}
+            \begin{enumerate}[label*=\arabic*.]
+                \item $\int\limits_0^3\int\limits_0^1\int\limits_0^2 z \,dy\,dx\,dz$.
+                \item $\int\limits_0^4\int\limits_0^2\int\limits_0^3 (x^2 + y^2 + z^2) \,dy\,dx\,dz$.
+                \item $\int\limits_0^3\int\limits_0^1\int\limits_0^2 8 z^{2} x {\mathrm e}^{2 x y z} \,dy\,dx\,dz$.
+                \item $\int\limits_2^5\int\limits_0^2\int\limits_1^4 (x + 2y + 3z) \,dy\,dx\,dz$.
+                \item $\int\limits_0^3\int\limits_0^1\int\limits_0^\pi x z^{2} \cos\left(x y z\right) \,dy\,dx\,dz$.
+                \item $\int\limits_0^3\int\limits_0^1\int\limits_0^2 (3x + y^2 + 2z) \,dy\,dx\,dz$.
+                \item $\int\limits_0^1\int\limits_0^3\int\limits_0^2 (xy + 2yz + 3zx) \,dy\,dx\,dz$.
+                \item $\int\limits_3^5\int\limits_1^2\int\limits_2^4 \frac{1}{xyz} \,dy\,dx\,dz$.
+                \item $\int\limits_0^1\int\limits_0^1\int\limits_0^1 (x^3 + y^3 + z^3) \,dy\,dx\,dz$.
+                \item $\int\limits_0^3\int\limits_0^2\int\limits_0^1 (2xy + z^2) \,dy\,dx\,dz$.
+            \end{enumerate}
+        \end{multicols}
+    \item
+        \begin{multicols}{2}
+            \begin{enumerate}[label*=\arabic*.]
+                \item $2 z$.
+                \item $3 x^{2}+3 z^{2}+9$.
+                \item $-4 z+4 z {\mathrm e}^{4 x z}$.
+                \item $3 x+15+9 z$.
+                \item $\sin\! \left(x z \pi \right) z$.
+                \item $\frac{8}{3}+6 x+4 z$.
+                \item $6 z x+2 x+4 z$.
+                \item $\frac{\ln\! \left(2\right)}{x z}$.
+                \item $x^{3}+\frac{1}{4}+z^{3}$.
+                \item $z^{2}+x$.
+            \end{enumerate}
+        \end{multicols}
+    \item
+        \begin{multicols}{2}
+            \begin{enumerate}[label*=\arabic*.]
+                \item $2 z$.
+                \item $6 z^{2}+26$.
+                \item $-1+{\mathrm e}^{4 z}-4 z$.
+                \item $36+18 z$.
+                \item $-\frac{-1+\cos\! \left(\pi  z\right)}{\pi}$.
+                \item $\frac{17}{3}+4 z$.
+                \item $39 z+9$.
+                \item $\frac{\ln\! \left(2\right)^{2}}{z}$.
+                \item $\frac{1}{2}+z^{3}$.
+                \item $2 z^{2}+2$.
+            \end{enumerate}
+        \end{multicols}
+    \item
+        \begin{multicols}{2}
+            \begin{enumerate}[label*=\arabic*.]
+                \item $9$.
+                \item $232$.
+                \item $-\frac{85}{4}+\frac{{\mathrm e}^{12}}{4}$.
+                \item $297$.
+                \item $\frac{3}{\pi}$.
+                \item $35$.
+                \item $\frac{57}{2}$.
+                \item $-\ln\! \left(3\right) \ln\! \left(2\right)^{2}+\ln\! \left(5\right) \ln\! \left(2\right)^{2}$.
+                \item $\frac{3}{4}$.
+                \item $24$.
+            \end{enumerate}
+        \end{multicols}
 \end{enumerate}
