Задвання для самоконтролю
Додане перше завдання на подвійні інтеграли по вимірних множинах

--- a/Content/Integrals_On_Measurable_Sets/integrals_on_measurable_sets.tex
+++ b/Content/Integrals_On_Measurable_Sets/integrals_on_measurable_sets.tex
@@ -1,19 +1,4 @@
 \part{Кратні інтеграли по вимірних множинах}
 \subimport{Theory}{theory}
 \subimport{Examples}{examples}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+\subimport{Self_Control}{self_control}
