--- a/Content/Integrals_On_Measurable_Sets/Self_Control/Problems/Double/double.tex
+++ b/Content/Integrals_On_Measurable_Sets/Self_Control/Problems/Double/double.tex
@@ -32,91 +32,33 @@
 \end{enumerate}
 \item\label{problem:measurable_sets:self_control:double:inner} Підрахуйте наступні інтеграли Рімана. Зверніть увагу на те, що ви знаходите внутрішні інтеграли з відповідей на попереднє завдання, а також не те, що відповіді на це завдання мають бути функціями від $x$ або від $y$.
 \begin{enumerate}[label*=\arabic*.]
-\item  \begin{multicols}{2}\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^2 x^2y\,dx$
-            \item $\int\limits_0^3 x^2y\,dy$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^4 e^{x + y}\,dx$
-            \item $ \int\limits_0^5 e^{x + y}\,dy$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item \begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_1^2 \frac{y}{x}\,dx$
-            \item $ \int\limits_0^2 \frac{y}{x}\,dy$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item \begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^2 \frac{x^2}{1+y^2}\,dx$
-            \item $ \int\limits_0^1 \frac{x^2}{1+y^2}\,dy$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^\pi \sin(x + y)\,dx$
-            \item $ \int\limits_0^{\frac{\pi}{2}} \sin(x + y)\,dy$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^5 \sqrt{ 9 -x - 2y}\,dx$
-            \item $ \int\limits_0^2 \sqrt{ 9 -x - 2y}\,dy$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_1^2 \frac{1}{\left( 2 x + 3 y \right)^2}\,dx$
-            \item $ \int\limits_1^3 \frac{1}{\left( 2 x + 3 y \right)^2}\,dy$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_1^2 \frac{y}{x+y^2}\,dx$
-            \item $ \int\limits_0^3 \frac{y}{x+y^2}\,dy$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^1 x^2\sin^2y\,dx$
-            \item $ \int\limits_0^\pi x^2\sin^2y\,dy$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item \begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^2 \frac{x^2}{y^2}\,dx$
-            \item $\int\limits_1^3 \frac{x^2}{y^2}\,dy$
-            \end{enumerate}\end{multicols}
+    \begin{multicols}{2}
+        \item $\int\limits_{y}^{2-y}\left(x-y\right)d x$;
+        \item $\int\limits_{\frac{1}{x}}^{x}\frac{x^{2}}{y^{2}}d y$;
+        \item $\int\limits_{\pi -y}^{y}\cos\! \left(x+y\right)d x)$;
+        \item $\int\limits_{x}^{6-2 x}\frac{2 x^{2}-6 x}{y^{2}}d y$;
+        \item $\int\limits_{2 x}^{x^{2}+1}\frac{y}{x+1}d y$;
+        \item $\int\limits_{x^{3}}^{2-x}xd y$;
+        \item $\int\limits_{-1-y}^{-y^{2}+1}\frac{2 x+6}{y+3}d x$;
+        \item $\int\limits_{y}^{\frac{5 y}{4}}\sqrt{x-y}d x$;
+        \item $\int\limits_{x}^{2 x}{\mathrm e}^{x-y}d y$;
+        \item $\int\limits_{-y}^{y}\sqrt{-x^{2}+y^{2}}d x$.
+    \end{multicols}
 \end{enumerate}
-\item\label{problem:measurable_sets:self_control:double:outer} Підрахуйте наступні інтеграли Рімана. Переконайтесь, що інтеграли дорівнюють один одному. Зверніть увагу на те, що ви інтегруєте функціїї, що є відповідями на попереднє завдання, а межі інтегрування відповідають зовнішнім інтегралам з відповідей на задвання (\ref{problem:measurable_sets:self_control:double:reduction}).
+\item\label{problem:measurable_sets:self_control:double:outer} Підрахуйте наступні інтеграли Рімана. Зверніть увагу на те, що ви інтегруєте функціїї, що є відповідями на попереднє завдання, а межі інтегрування відповідають зовнішнім інтегралам з відповідей на задвання (\ref{problem:measurable_sets:self_control:double:reduction}).
 \par\noindent
 \begin{minipage}{14.5cm}
 \begin{enumerate}[label*=\arabic*.]
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^3 \frac{8}{3}y\,dy$
-            \item $\int\limits_0^2 \frac{9}{2}x^2\,dx$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^5 \left(e^{4 + y} - e^y\right)\,dy$.
-            \item $ \int\limits_0^4 \left(e^{x + 5} - e^x\right)\,dx$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^2 y\ln 2\,dy$
-            \item $\int\limits_1^2 \frac{2}{x}\,dx$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^1 \frac{8}{3\left(1+y^2\right)}\,dy$
-            \item $ \int\limits_0^2 \frac{\pi x^2}{4}\,dx$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^{\frac{\pi}{2}} 2\cos(x + y)\,dy$
-            \item $ \int\limits_0^\pi \left(\cos x + \sin x \right)\,dx$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^2 \left(\frac{2\left(9 - 2 y\right)^{\frac{3}{2}}}{3} - \frac{2\left(4 - 2 y\right)^{\frac{3}{2}}}{3}\right)\,dy$
-            \item $ \int\limits_0^5 \left(\frac{\left(9 - x\right)^{\frac{3}{2}}}{3} - \frac{\left(5 - x\right)^{\frac{3}{2}}}{3}\right)\,dx$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_1^3 \left(\frac{1}{2 \left(3 y+2\right)}-\frac{1}{2 \left(3 y+4\right)}\right)\,dy$
-            \item $ \int\limits_1^2\left(\frac{1}{3 \left(2 x+3\right)}-\frac{1}{3 \left(2 x+9\right)}\right)\,dx$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^3 \left(\ln\! \left(y^{2}+2\right) y - \ln\! \left(y^{2}+1\right) y\right)dy$
-            \item $ \int\limits_1^2 \left(\frac{\ln\! \left(x+9\right)}{2} - \frac{\ln\! \left(x\right)}{2}\right)\,dx$
-        \end{enumerate}\end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_0^\pi \frac{\sin^{2} y}{3}\,dy$
-            \item $ \int\limits_0^1 \frac{\pi  x^{2}}{2}\,dx$
-        \end{enumerate} \end{multicols}
-\begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-            \item $\int\limits_1^3 \frac{8}{3 y^{2}}\,dy$
-            \item $\int\limits_0^2 \frac{2 x^{2}}{3}\,dx$
-            \end{enumerate}\end{multicols}
+            \item ${\int\limits_{0}^{1}2 \left(y-1\right)^{2}d y}$
+            \item ${\int\limits_{1}^{2}\left(x^{3}-x\right)d x}$.
+            \item ${\int_{\frac{\pi}{2}}^{\pi}\sin\! \left(2 y\right)d y}$
+            \item ${\int_{1}^{2}\left(3 x-6\right)d x}$
+            \item ${\int_{0}^{1}\left(\frac{1}{2} x^{3}-\frac{1}{2} x^{2}-\frac{1}{2} x+\frac{1}{2}\right)d x}$
+            \item ${\int_{0}^{1}x \left(-x^{3}-x+2\right)d x}$
+            \item ${\int_{-1}^{2}\left(y^{3}-3 y^{2}+4\right)d y}$
+            \item ${\int_{1}^{4}\frac{y^{\frac{3}{2}}}{12}d y}$
+            \item ${\int_{0}^{1}\left(1-{\mathrm e}^{-x}\right)d x}$
+            \item ${\int_{0}^{1}\frac{y^{2} \pi}{2}d y}$
 \end{enumerate}
 \end{minipage}
 \item Підрахуйте наступні подвійні інтеграли. Переконайтесь, що інтеграли дорівнюють один одному.
