Відповіді на похвійні інтеграли по вимірних множинах

--- a/Content/Integrals_On_Measurable_Sets/Self_Control/Answers/answers.tex
+++ b/Content/Integrals_On_Measurable_Sets/Self_Control/Answers/answers.tex
@@ -1,4 +1,4 @@
 \chapter{Відповіді на завдання для самоконтролю}
 В цьому розділі наведені відповіді на завдання попереднього розділу.
 \subimport{Double}{double}
-\subimport{Triple}{triple}
+% \subimport{Triple}{triple}
