--- a/Content/Integrals_On_Measurable_Sets/Self_Control/Problems/problems.tex
+++ b/Content/Integrals_On_Measurable_Sets/Self_Control/Problems/problems.tex
@@ -1,4 +1,4 @@
 \chapter{Завдання для самоконтролю}
 В цьому розділі наведені завдання для самоконтролю студентів. Відповіді на ці завдання наведені в наступному розділі.
 \subimport{Double}{double}
-\subimport{Triple}{triple}
+% \subimport{Triple}{triple}
