--- a/Content/Integrals_On_Measurable_Sets/Self_Control/Answers/Double/double.tex
+++ b/Content/Integrals_On_Measurable_Sets/Self_Control/Answers/Double/double.tex
@@ -3,73 +3,48 @@
     \item
         \begin{multicols}{2}
             \begin{enumerate}[label*=\arabic*.]
-                \item $\int\limits_0^3\int\limits_0^2 x^2y\,dx\,dy$, $\int\limits_0^2 \int\limits_0^3 x^2y\,dy\,dx$.
-                \item $\int\limits_2^5\int\limits_1^4 e^{xy}\,dx\,dy$, $\int\limits_1^4 \int\limits_1^4 e^{xy}\,dy\,dx$.
-                \item $\int\limits_0^2\int\limits_0^1 (x+y)\,dx\,dy$, $\int\limits_0^1 \int\limits_0^2 (x+y)\,dy\,dx$.
-                \item $\int\limits_0^2\int\limits_0^1 xy^2\,dx\,dy$, $\int\limits_0^1 \int\limits_0^2 xy^2\,dy\,dx$.
-                \item $\int\limits_0^4\int\limits_0^3 \sin(xy)\,dx\,dy$, $\int\limits_0^3 \int\limits_0^4 \sin(xy)\,dy\,dx$.
-                \item $\int\limits_0^3\int\limits_0^1 e^{x^2}\,dx\,dy$, $\int\limits_0^1 \int\limits_0^3 e^{x^2}\,dy\,dx$.
-                \item $\int\limits_0^1\int\limits_0^2 (x+y)\,dx\,dy$, $\int\limits_0^2 \int\limits_0^1 (x+y)\,dy\,dx$.
-                \item $\int\limits_0^3\int\limits_1^2 \frac{1}{1+xy}\,dx\,dy$, $\int\limits_1^2 \int\limits_0^3 \frac{1}{1+xy}\,dy\,dx$.
-                \item $\int\limits_0^1\int\limits_0^1 e^{x+y}\,dx\,dy$, $\int\limits_0^1 \int\limits_0^1 e^{x+y}\,dy\,dx$.
-                \item $\int\limits_1^3\int\limits_0^2 2xy\,dx\,dy$, $\int\limits_0^2 \int\limits_1^3 2xy\,dy\,dx$.
+                \item ${\int\limits_{0}^{1}\int\limits_{y}^{2-y}\left(x-y\right)d xd y}$;
+                \item $\int\limits_{1}^{2} \int\limits_{\frac{1}{x}}^{x}\frac{x^{2}}{y^{2}}d y d x$.
+                \item $\int\limits_{\frac{\pi}{2}}^{\pi}\int\limits_{\pi -y}^{y}\cos\! \left(x+y\right)d xd y$.
+                \item $\int\limits_{1}^{2} \int\limits_{x}^{6-2 x}\frac{2 x^{2}-6 x}{y^{2}}d y d x$.
+                \item ${\int\limits_{0}^{1}\int\limits_{2 x}^{x^{2}+1}\frac{y}{x+1}d yd x}$.
+                \item ${\int\limits_{0}^{1}\int\limits_{x^{3}}^{2-x}xd yd x}$.
+                \item ${\int\limits_{-1}^{2}\int\limits_{-1-y}^{-y^{2}+1}\frac{2 x+6}{y+3}d x d y}$.
+                \item ${\int\limits_{1}^{4}\int\limits_{y}^{\frac{5 y}{4}}\sqrt{x-y}d xd y}$.
+                \item ${\int\limits_{0}^{1}\int\limits_{x}^{2 x}{\mathrm e}^{x-y}d yd x}$.
+                \item ${\int\limits_{0}^{1}\int\limits_{-y}^{y}\sqrt{-x^{2}+y^{2}}d x d y}$.
             \end{enumerate}
         \end{multicols}
-    \item \begin{enumerate}[label*=\arabic*.]
-        \item\begin{multicols}{2}\begin{enumerate}[label=(\alph*)]
-                        \item ${\frac{8 y}{3}}$
-                        \item ${\frac{9x^2}{2}}$
-                    \end{enumerate}\end{multicols}
-        \begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-                        \item ${e^{y+4}-e^y}$
-                        \item ${e^{x+5}-e^x}$
-                    \end{enumerate}\end{multicols}
-       \begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-                        \item ${y\ln 2}$
-                        \item ${\frac{2}{x}}$
-                    \end{enumerate}\end{multicols}
-        \begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-                        \item ${\frac{8}{3\left(1+y^2\right)}}$
-                        \item ${\frac{\pi x^2}{4}}$
-                    \end{enumerate}\end{multicols}
-        \begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-                        \item ${2\cos y}$
-                        \item ${\cos x + \sin x}$
-                    \end{enumerate}\end{multicols}
-       \begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-                        \item ${\frac{2}{3}\left(9 - 2 y\right)^{\frac{3}{2}} - \frac{2}{3}\left(4 - 2 y\right)^{\frac{3}{2}}}$
-                        \item ${\frac{1}{3}\left(9 - x\right)^{\frac{3}{2}} - \frac{1}{3}\left(5 - x\right)^{\frac{3}{2}}}$
-                    \end{enumerate}\end{multicols}
-        \begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-                        \item ${\frac{1}{2\left(3 y + 2\right)} - \frac{1}{2\left(3 y + 4\right)}}$
-                        \item ${\frac{1}{3\left(2 x + 3\right)} - \frac{1}{2\left(2 x + 9\right)}}$
-                    \end{enumerate}\end{multicols}
-        \begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-                        \item ${y \ln \left(y^2 + 2\right) - y \ln \left(y^2 + 1\right)}$
-                        \item ${\frac{1}{2}\ln \left(x + 9\right) - \frac{1}{2}\ln x}$
-                    \end{enumerate}\end{multicols}
-        \begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-                        \item ${\frac{1}{3}\sin^2 y}$
-                        \item ${\frac{\pi x^2}{2}}$
-                    \end{enumerate}\end{multicols}
-        \begin{multicols}{2}\item\begin{enumerate}[label=(\alph*)]
-                        \item ${\frac{8}{3 y^2}}$
-                        \item ${\frac{2x^2}{3}}$
-                    \end{enumerate}\end{multicols}
-    \end{enumerate}
     \item
-    \begin{multicols}{2}
-        \begin{enumerate}[label*=\arabic*.]
-            \item  ${12}$
-            \item  ${1 - e^4 - e^5 + e^9}$
-            \item  ${2 \ln 2}$
-            \item  ${\frac{2\pi}{3}}$
-            \item  ${2}$
-            \item  ${\frac{422}{15} - \frac{10\sqrt{5}}{3}}$
-            \item  ${\frac{\ln\! \left(7\right)}{6}-\frac{\ln\! \left(5\right)}{6}-\frac{\ln\! \left(13\right)}{6}+\frac{\ln\! \left(11\right)}{6}}$
-            \item  ${-6 \ln\! \left(2\right)-5 \ln\! \left(5\right)+\frac{11 \ln\! \left(11\right)}{2}}$
-            \item  ${\frac{\pi}{6}}$
-            \item  ${\frac{16}{9}}$
-        \end{enumerate}
-    \end{multicols}
+         \begin{multicols}{2}
+            \begin{enumerate}[label*=\arabic*.]
+                \item ${2 \left(y-1\right)^{2}}$;
+                \item ${x^{3}-x}$.
+                \item ${\sin\! \left(2 y\right)}$.
+                \item ${3 x-6}$.
+                \item ${\frac{\left(x+1\right) \left(x-1\right)^{2}}{2}}$.
+                \item ${-x^{4}-x^{2}+2 x}$.
+                \item ${y^{3}-3 y^{2}+4}$.
+                \item ${\frac{y^{\frac{3}{2}}}{12}}$.
+                \item ${1-{ e}^{-x}}$.
+                \item ${\frac{\pi y^{2}}{2}}$.
+            \end{enumerate}
+        \end{multicols}
+    \begin{minipage}{\textwidth}
+        \item
+            \begin{multicols}{2}
+                \begin{enumerate}[label*=\arabic*.]
+                    \item  ${\frac{2}{3}}$
+                    \item  ${\frac{9}{4}}$
+                    \item  ${-1}$
+                    \item  ${-\frac{3}{2}}$
+                    \item  ${\frac{5}{24}}$
+                    \item  ${\frac{7}{15}}$
+                    \item  ${\frac{27}{4}}$
+                    \item  ${\frac{31}{30}}$
+                    \item  ${{ e}^{-1}}$
+                    \item  ${\frac{\pi}{6}}$
+                \end{enumerate}
+            \end{multicols}
+    \end{minipage}
 \end{enumerate}
